Fixed scss problems affecting navbar alignments

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: #5F74B7;
+  background-color: #5F74B7;
 }
 
 .navbar-lewagon .navbar-collapse {
